syntax = "proto3";

package auth;

option go_package = "./";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string token = 2;
}

message LogoutRequest {
    string username = 1;
}

message LogoutResponse {
    bool success = 1;
    string message = 2;
}

message ValidateTokenRequest {
    string username = 1;
    string token = 2;
}

message ValidateTokenResponse {
    bool valid = 1;
}